Fix UserDetailsServiceImpl & SecurityConfig